package org.example;

public abstract class Membresia {

    public abstract double getTasaPlazoFijo();
    public abstract int getMinimoDiasPlazoFijo();
    public abstract int getParkingBonos();
}
