@startuml
abstract class ProductoFinanciero {
-fechaOperacion: Date
+<<create>> ProductoFinanciero(fechaOperacion: Date)
+<<abstract>> retornoInversion(montoInicial: Real): Real
}
class CompraDolares{
-valorCompra:Real
+<<create>> CompraDolares(fechaOperacion: Date, valorCompra: Real)
}
class CompraPesos{
-valorCompra:Real
+<<create>> CompraPesos(fechaOperacion: Date, valorCompra: Real)
}
class PlazoFijo{
-cantidadDias: Integer
-interes: Real
+<<create>> PlazoFijo(fechaOperacion: Date, cantidadDias: Integer, interes: Real)
}
class CompraBonoBajoRiesgo{
-parking: Integer
+<<create>> CompraBonoBajoRiesgo(fechaOperacion: Date, parking: Integer)
}
class CompraBonoAltoRiesgo{
-parking: Integer
+<<create>> CompraBonoAltoRiesgo(fechaOperacion: Date, parking: Integer)
}
class ProductoCombinado{
+agregarProducto(p: ProductoFinanciero)
+removerProducto(p: ProductoFinanciero)
+retornoInversion(montoInicial: Real): Real
}

CompraDolares -up-|> ProductoFinanciero
CompraPesos -up-|> ProductoFinanciero
PlazoFijo -up-|> ProductoFinanciero
CompraBonoBajoRiesgo -up-|> ProductoFinanciero
CompraBonoAltoRiesgo -up-|> ProductoFinanciero
ProductoCombinado -up-|> ProductoFinanciero
ProductoCombinado o--> "*" ProductoFinanciero : productos

abstract class Membresia {
+<<abstract>> getTasaPlazoFijo(): Real
+<<abstract>> getMinimoDiasPlazoFijo(): Integer
+<<abstract>> getParkingBonos(): Integer
}

class Silver {
+getTasaPlazoFijo(): Real
+getMinimoDiasPlazoFijo(): Integer
+getParkingBonos(): Integer
}
class Gold {
+getTasaPlazoFijo(): Real
+getMinimoDiasPlazoFijo(): Integer
+getParkingBonos(): Integer
}

Silver -up-|> Membresia
Gold -up-|> Membresia

class ProductoFinancieroBuilder {
-productoActual: ProductoCombinado
-membresia: Membresia
+ProductoFinancieroBuilder(m: Membresia)
+agregarDolares(valorCompra: Real)
+agregarPesos(valorCompra: Real)
+agregarPlazoFijo(dias: Integer)
+agregarBonoBajoRiesgo()
+agregarBonoAltoRiesgo()
+build(): ProductoFinanciero
}

ProductoFinancieroBuilder ..> ProductoCombinado : construye
ProductoFinancieroBuilder --> Membresia : conoce

@enduml